# GarminForge

./: .gitattributes  .gitignore  CLAUDE.md  Koda.md  QUICK_WINS.md  README.md  SLOW_BURNS.md  alembic.ini  manage.py  pyproject.toml  requirements.txt  run.py  setup.ps1  start.sh
.devcontainer/: devcontainer.json
docs/: enhancements.md  garmin_api_map.md
docs/superpowers/plans/: 2026-04-05-questionnaire-wizard.md  2026-04-07-workout-player.md  2026-04-08-koda-ui-redesign.md  (+2 more)
examples/: auth_setup.py  running_workout.py  strength_workout.py
garminforge/: __init__.py  auth.py  client.py  exceptions.py
garminforge/workouts/: __init__.py  exercises.py  running.py  steps.py  strength.py
scripts/: exercisedb_map.py  fetch_exercise_gifs.py  graduate_meals.py  graduate_recipes.py
tests/: test_ai_provider.py  test_editing_api.py  test_editing_e2e.py  test_exercisedb_map.py  test_fitness_rank.py  test_meal_selector.py  test_nutrition_generator.py  test_nutrition_models.py  test_onboarding.py  test_profile_strava.py  test_program_generator.py  test_questionnaire.py  test_routes_recipe.py  test_routes_suggest.py  test_strava_client.py  test_strava_insights.py  test_workout_completion.py  test_workout_editor.py  test_workout_generator_media.py  test_workout_generator_recovery.py
web/: __init__.py  ai_provider.py  app.py  auth_utils.py  db.py  exercise_links.py  garmin_sso.py  meal_selector.py  models.py  nutrition_generator.py  program_generator.py  rendering.py  routes_auth.py  routes_my.py  routes_nutrition.py  routes_onboarding.py  routes_programs.py  routes_strava.py  strava_client.py  strava_insights.py  translations.py  workout_generator.py
web/data/: meal_pool.json
web/migrations/: env.py
web/static/css/: style.css
web/templates/: base.html  dashboard.html  index.html  login_forge.html  mfa.html  my_plans.html  my_profile.html  my_program_detail.html  my_programs.html  my_programs_new.html  my_progress.html  my_session_preview.html  nutrition.html  questionnaire.html  register.html  sso.html  waiting.html  workout_complete.html  workout_preview.html
(+17 files in other folders)
