[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garminforge"
dynamic = ["version"]
description = "Python toolkit for creating, uploading, and scheduling Garmin Connect workouts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "garminconnect[workout]>=0.2.40",
    "garth>=0.4.47,<0.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13",
    "bcrypt>=4.0",
    "authlib>=1.3",
    "httpx>=0.27",
    "email-validator>=2.1",
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
garminforge = "garminforge.cli:main"
garminforge-web = "web.app:app"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["garminforge*", "web*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
